--- a/Front-End/html/student.html
+++ b/Front-End/html/student.html
@@ -12,15 +12,17 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/colors.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/footer.css">
-    <link rel="shortcut icon" type="imagem/x-icon" href="./img/logo-image.png" />
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/colors.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/studentMain.css">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="shortcut icon" type="imagem/x-icon" href="../img/logo-image.png" />
 
+    <script src="../js/student.js" defer type="module"></script>
     <script src="https://kit.fontawesome.com/56adc94ecd.js" crossorigin="anonymous"></script>
+
 
     <title>Lion School</title>
 </head>
@@ -28,7 +30,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./img/logo-image.png" alt="Logo Lion School">
+            <img src="../img/logo-image.png" alt="Logo Lion School">
             <div class="name-school">
                 <span>Lion</span>
                 <span>School</span>
@@ -36,25 +38,30 @@
         </div>
 
         <div class="out">
-            <i class="fas fa-sign-out-alt"></i>
-            <span class="out__text">Sair</span>
+            <a href="./class.html">
+                <i class="fas fa-sign-out-alt"></i>
+                <span class="out__text">Voltar</span>
+            </a>
         </div>
     </header>
+
     <main>
-        <div class="title">
-            <h1>
-                Escolha um
-                <span>curso</span>
-                para gerenciar
-            </h1>
+        <article>
+            <img src="../img/student-image2.png" alt="Image student">
+            <h3>José Matheus da Silva Miranda</h3>
+        </article>
+
+        <div class="grafic-student">
+
+
+
         </div>
 
-        <img class="devices-image" src="./img/devices.png" alt="Devices">
-        <img class="student-image" src="./img/studant.png" alt="Student">
-
     </main>
-    <footer>
 
+
+
+    <footer>
         <ul class="contact-container">
             <li>
                 <div class="contact-item">
@@ -104,6 +111,7 @@
         </ul>
 
     </footer>
+
 </body>
 
 </html>
