Começando a consumir API Postman

--- a/Front-End/html/class.html
+++ b/Front-End/html/class.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="out">
+        <div class="out" >
             <a href="./home.html">
                 <i class="fas fa-sign-out-alt"></i>
                 <span class="out__text">Voltar</span>
@@ -50,15 +50,15 @@
 
     <main>
         <div class="filters">
-            <div class="selects">
-                <select class="select-status">
+            <div id="selects">
+                <select id="select-status">
                     <option selected disabled>Status</option>
                     <option class="option-status">Status classe</option>
                     <option class="option-finalized">Finalizado</option>
                     <option class="option-studying">Cursando</option>
                 </select>
 
-                <select class="select-year">
+                <select id="select-year">
                     <option selected disabled>Ano</option>
                     <option>2018</option>
                     <option>2020</option>
@@ -99,8 +99,6 @@
                 <img src="../img/student-image.png" alt="Image Student">
                 <h3>JOSÉ MATHEUS DA SILVA MIRANDA</h3>
             </li> -->
-
-
         </ul>
 
     </main>
