--- a/Front-End/html/student.html
+++ b/Front-End/html/student.html
@@ -45,17 +45,17 @@
         </div>
     </header>
 
-    <main>
-        <article>
-            <img src="../img/student-image2.png" alt="Image student">
-            <h3>José Matheus da Silva Miranda</h3>
+    <main id="main">
+        <article id="student-select">
+            <!-- <img src="../img/student-image2.png" alt="Image student">
+            <h3>José Matheus da Silva Miranda</h3> -->
         </article>
 
-        <div class="grafic-student">
+        <!-- <div class="grafic-student">
 
 
 
-        </div>
+        </div> -->
 
     </main>
 
