--- a/Front-End/html/class.html
+++ b/Front-End/html/class.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="out">
+        <div class="out" >
             <a href="./home.html">
                 <i class="fas fa-sign-out-alt"></i>
                 <span class="out__text">Voltar</span>
@@ -50,15 +50,14 @@
 
     <main>
         <div class="filters">
-            <div class="selects">
-                <select class="select-status">
-                    <option selected disabled>Status</option>
-                    <option class="option-status">Status classe</option>
-                    <option class="option-finalized">Finalizado</option>
-                    <option class="option-studying">Cursando</option>
+            <div id="select">
+                <select id="select-status">
+                    <option value="status">Status</option>
+                    <option value="finalized">Finalizado</option>
+                    <option value="studying">Cursando</option>
                 </select>
 
-                <select class="select-year">
+                <select id="select-year">
                     <option selected disabled>Ano</option>
                     <option>2018</option>
                     <option>2020</option>
@@ -94,13 +93,10 @@
                 <img src="../img/student-image.png" alt="Image Student">
                 <h3>HÉLIDA BENTO DE OLIVEIRA LINS</h3>
             </li>
-
             <li class="card-finalized">
                 <img src="../img/student-image.png" alt="Image Student">
                 <h3>JOSÉ MATHEUS DA SILVA MIRANDA</h3>
             </li> -->
-
-
         </ul>
 
     </main>
