--- a/Front-End/html/class.html
+++ b/Front-End/html/class.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="out" >
+        <div class="out">
             <a href="./home.html">
                 <i class="fas fa-sign-out-alt"></i>
                 <span class="out__text">Voltar</span>
@@ -50,20 +50,12 @@
 
     <main>
         <div class="filters">
-<<<<<<< HEAD
+
             <div id="select">
                 <select id="select-status">
                     <option value="status">Status</option>
                     <option value="finalized">Finalizado</option>
                     <option value="studying">Cursando</option>
-=======
-            <div id="selects">
-                <select id="select-status">
-                    <option selected disabled>Status</option>
-                    <option class="option-status">Status classe</option>
-                    <option class="option-finalized">Finalizado</option>
-                    <option class="option-studying">Cursando</option>
->>>>>>> ee1191ae03aa51768b917ee65a6223f8e356d8bf
                 </select>
 
                 <select id="select-year">
@@ -95,7 +87,7 @@
         </div>
 
 
-        <h1 class="title-class">Desenvolvimento de sistemas</h1>
+        <!-- <h1 class="title-class">Desenvolvimento de sistemas</h1> -->
 
         <ul id="list-students">
             <!-- <li class="card-studying">
