gráfico com validação, porém sem a API

--- a/Front-End/html/student.html
+++ b/Front-End/html/student.html
@@ -51,9 +51,50 @@
             <h3>José Matheus da Silva Miranda</h3>
         </article>
 
-        <div class="grafic-student">
+        <div class="grafic">
+            <div class="materiasSpan">
+                <span style="color: red;" class="bar_value">SOP</span>
+                <span style="color: red;" class="bar_value">IPR</span>
+                <span style="color: red;" class="bar_value">LIMA</span>
+                <span style="color: red;" class="bar_value">BD</span>
+                <span style="color: red;" class="bar_value">PBE</span>
+                <span style="color: red;" class="bar_value">PFE</span>
+            </div>
+            <div class="grafic-student">
+                <progress class="progress_bar" max="100" value="90">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="30">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="50">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="90">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="30">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="50">
+
+                </progress>
 
 
+            </div>
+            <div class="spans_bar">
+                <span style="color: red;" class="bar_value"> 2</span>
+                <span style="color: red;" class="bar_value"> 2</span>
+                <span style="color: red;" class="bar_value">3 </span>
+                <span style="color: red;" class="bar_value"> 1</span>
+                <span style="color: red;" class="bar_value">1 </span>
+                <span style="color: red;" class="bar_value">1 </span>
+            </div>
 
         </div>
 
