--- a/Front-End/html/home.html
+++ b/Front-End/html/home.html
@@ -90,7 +90,7 @@
         </ul>
 
         <p>
-            Copyright © 2022 | Camila Pinheiro
+            Copyright © 2022 | Camila Pinheiro & Ítalo Reis
         </p>
 
         <ul class="social-container">
