--- a/Front-End/html/student.html
+++ b/Front-End/html/student.html
@@ -1,117 +1,159 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Site dedicado ao gerenciamento do sistema escolar da Lion School."
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site dedicado ao gerenciamento do sistema escolar da Lion School." />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/colors.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/studentMain.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="shortcut icon" type="imagem/x-icon" href="../img/logo-image.png" />
+    <link rel="stylesheet" href="../css/reset.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/colors.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/studentMain.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link
+      rel="shortcut icon"
+      type="imagem/x-icon"
+      href="../img/logo-image.png"
+    />
 
     <script src="../js/student.js" defer type="module"></script>
-    <script src="https://kit.fontawesome.com/56adc94ecd.js" crossorigin="anonymous"></script>
-
+    <script src="../js/graphic.js" defer type="module"></script>
+    <script
+      src="https://kit.fontawesome.com/56adc94ecd.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Lion School</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="logo">
-            <img src="../img/logo-image.png" alt="Logo Lion School">
-            <div class="name-school">
-                <span>Lion</span>
-                <span>School</span>
-            </div>
+      <div class="logo">
+        <img src="../img/logo-image.png" alt="Logo Lion School" />
+        <div class="name-school">
+          <span>Lion</span>
+          <span>School</span>
         </div>
+      </div>
 
-        <div class="out">
-            <a href="./class.html">
-                <i class="fas fa-sign-out-alt"></i>
-                <span class="out__text">Voltar</span>
-            </a>
-        </div>
+      <div class="out">
+        <a href="./class.html">
+          <i class="fas fa-sign-out-alt"></i>
+          <span class="out__text">Voltar</span>
+        </a>
+      </div>
     </header>
 
     <main id="main">
-        <article id="student-select">
-            <!-- <img src="../img/student-image2.png" alt="Image student">
+      <article id="student-select">
+        <!-- <img src="../img/student-image2.png" alt="Image student">
             <h3>José Matheus da Silva Miranda</h3> -->
-        </article>
+      </article>
 
-        <!-- <div class="grafic-student">
+      <div class="grafic">
+        <div class="materiasSpan">
+          <!-- <span style="color: red;" class="bar_value">SOP</span>
+                <span style="color: red;" class="bar_value">IPR</span>
+                <span style="color: red;" class="bar_value">LIMA</span>
+                <span style="color: red;" class="bar_value">BD</span>
+                <span style="color: red;" class="bar_value">PBE</span>
+                <span style="color: red;" class="bar_value">PFE</span> -->
+        </div>
+        <div id="grafic-student">
+          <!-- <progress class="progress_bar" max="100" value="90">
 
+                </progress>
 
+                <progress class="progress_bar" max="100" value="30">
 
-        </div> -->
+                </progress>
 
+                <progress class="progress_bar" max="100" value="50">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="90">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="30">
+
+                </progress>
+
+                <progress class="progress_bar" max="100" value="50">
+
+                </progress> -->
+        </div>
+        <div class="spans_bar">
+          <!-- <span style="color: red;" class="bar_value"> 2</span>
+                <span style="color: red;" class="bar_value"> 2</span>
+                <span style="color: red;" class="bar_value">3 </span>
+                <span style="color: red;" class="bar_value"> 1</span>
+                <span style="color: red;" class="bar_value">1 </span>
+                <span style="color: red;" class="bar_value">1 </span> -->
+        </div>
+      </div>
     </main>
 
-
-
     <footer>
-        <ul class="contact-container">
-            <li>
-                <div class="contact-item">
-                    <i class="fa-solid fa-phone contato-item__icon"></i>
-                    <span class="contact-item__text">(11) 4774-4700</span>
-                </div>
-            </li>
-            <li>
-                <div class="contact-item">
-                    <i class="fa-solid fa-envelope" contato-item__icon></i>
-                    <span class="contact-item__text">lionschool@gmail.com</span>
-                </div>
-            </li>
-            <li>
-                <div class="contact-item">
-                    <i class="fa-solid fa-location-dot" contato-item__icon></i>
-                    <span class="contact-item__text">Rua tcc, 211, Centro, Jandira</span>
-                </div>
-            </li>
-        </ul>
+      <ul class="contact-container">
+        <li>
+          <div class="contact-item">
+            <i class="fa-solid fa-phone contato-item__icon"></i>
+            <span class="contact-item__text">(11) 4774-4700</span>
+          </div>
+        </li>
+        <li>
+          <div class="contact-item">
+            <i class="fa-solid fa-envelope" contato-item__icon></i>
+            <span class="contact-item__text">lionschool@gmail.com</span>
+          </div>
+        </li>
+        <li>
+          <div class="contact-item">
+            <i class="fa-solid fa-location-dot" contato-item__icon></i>
+            <span class="contact-item__text"
+              >Rua tcc, 211, Centro, Jandira</span
+            >
+          </div>
+        </li>
+      </ul>
 
-        <p>
-            Copyright © 2022 | Camila Pinheiro
-        </p>
+      <p>Copyright © 2022 | Camila Pinheiro & Ítalo Reis</p>
 
-        <ul class="social-container">
-            <li class="social">
-                <a href="#" target="_blank">
-                    <i class="fab fa-youtube"></i>
-                </a>
-            </li>
-            <li class="social">
-                <a href="#" target="_blank">
-                    <i class="fa-brands fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social">
-                <a href="#" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </li>
-            <li class="social">
-                <a href="#" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-            </li>
-        </ul>
-
+      <ul class="social-container">
+        <li class="social">
+          <a href="#" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </li>
+        <li class="social">
+          <a href="#" target="_blank">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li class="social">
+          <a href="#" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li class="social">
+          <a href="#" target="_blank">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </li>
+      </ul>
     </footer>
-
-</body>
-
+  </body>
 </html>
