--- a/Front-End/html/student.html
+++ b/Front-End/html/student.html
@@ -61,7 +61,7 @@
             <h3>José Matheus da Silva Miranda</h3> -->
       </article>
 
-      <div class="grafic">
+      <div class="graphic">
         <div class="materiasSpan">
           <!-- <span style="color: red;" class="bar_value">SOP</span>
                 <span style="color: red;" class="bar_value">IPR</span>
@@ -70,37 +70,17 @@
                 <span style="color: red;" class="bar_value">PBE</span>
                 <span style="color: red;" class="bar_value">PFE</span> -->
         </div>
-        <div id="grafic-student">
-          <!-- <progress class="progress_bar" max="100" value="90">
+        <div id="graphic-student">
+          <!-- <div class="teste-grafico">
+            <span style="color: red" class="bar_value rotate">PBE</span>
 
-                </progress>
+            <progress class="progress_bar" max="100" value="90"></progress>
+            <span style="color: red" class="bar_value rotate">1 </span>
+          </div> -->
 
-                <progress class="progress_bar" max="100" value="30">
-
-                </progress>
-
-                <progress class="progress_bar" max="100" value="50">
-
-                </progress>
-
-                <progress class="progress_bar" max="100" value="90">
-
-                </progress>
-
-                <progress class="progress_bar" max="100" value="30">
-
-                </progress>
-
-                <progress class="progress_bar" max="100" value="50">
-
-                </progress> -->
         </div>
         <div class="spans_bar">
           <!-- <span style="color: red;" class="bar_value"> 2</span>
-                <span style="color: red;" class="bar_value"> 2</span>
-                <span style="color: red;" class="bar_value">3 </span>
-                <span style="color: red;" class="bar_value"> 1</span>
-                <span style="color: red;" class="bar_value">1 </span>
                 <span style="color: red;" class="bar_value">1 </span> -->
         </div>
       </div>
