--- a/Front-End/student.html
+++ b/Front-End/student.html
@@ -15,20 +15,20 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/colors.css" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/studentMain.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/colors.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/studentMain.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <link
       rel="shortcut icon"
       type="imagem/x-icon"
-      href="../img/logo-image.png"
+      href="./img/logo-image.png"
     />
 
-    <script src="../js/student.js" defer type="module"></script>
-    <script src="../js/graphic.js" defer type="module"></script>
+    <script src="./js/student.js" defer type="module"></script>
+    <script src="./js/graphic.js" defer type="module"></script>
     <script
       src="https://kit.fontawesome.com/56adc94ecd.js"
       crossorigin="anonymous"
@@ -40,7 +40,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="../img/logo-image.png" alt="Logo Lion School" />
+        <img src="./img/logo-image.png" alt="Logo Lion School" />
         <div class="name-school">
           <span>Lion</span>
           <span>School</span>
@@ -57,17 +57,13 @@
 
     <main id="main">
       <article id="student-select">
-        <!-- <img src="../img/student-image2.png" alt="Image student">
+        <!-- <img src="./img/student-image2.png" alt="Image student">
             <h3>José Matheus da Silva Miranda</h3> -->
       </article>
 
       <div class="graphic">
         <div class="materiasSpan">
           <!-- <span style="color: red;" class="bar_value">SOP</span>
-                <span style="color: red;" class="bar_value">IPR</span>
-                <span style="color: red;" class="bar_value">LIMA</span>
-                <span style="color: red;" class="bar_value">BD</span>
-                <span style="color: red;" class="bar_value">PBE</span>
                 <span style="color: red;" class="bar_value">PFE</span> -->
         </div>
         <div id="graphic-student">
@@ -77,7 +73,6 @@
             <progress class="progress_bar" max="100" value="90"></progress>
             <span style="color: red" class="bar_value rotate">1 </span>
           </div> -->
-
         </div>
         <div class="spans_bar">
           <!-- <span style="color: red;" class="bar_value"> 2</span>
@@ -110,7 +105,7 @@
         </li>
       </ul>
 
-      <p>Copyright © 2022 | Camila Pinheiro & Ítalo Reis</p>
+      <p>Copyright © 2023 | Camila Pinheiro & Ítalo Reis</p>
 
       <ul class="social-container">
         <li class="social">
