Ajustando nomes de classes.

--- a/Front-End/student.html
+++ b/Front-End/student.html
@@ -62,7 +62,7 @@
       </article>
 
       <div class="graphic">
-        <div class="materiasSpan">
+        <div class="disciplines-span">
           <!-- <span style="color: red;" class="bar_value">SOP</span>
                 <span style="color: red;" class="bar_value">PFE</span> -->
         </div>
@@ -74,7 +74,7 @@
             <span style="color: red" class="bar_value rotate">1 </span>
           </div> -->
         </div>
-        <div class="spans_bar">
+        <div class="span-bar">
           <!-- <span style="color: red;" class="bar_value"> 2</span>
                 <span style="color: red;" class="bar_value">1 </span> -->
         </div>
