--- a/Front-End/student.html
+++ b/Front-End/student.html
@@ -62,22 +62,16 @@
       </article>
 
       <div class="graphic">
-        <div class="disciplines-span">
-          <!-- <span style="color: red;" class="bar_value">SOP</span>
-                <span style="color: red;" class="bar_value">PFE</span> -->
-        </div>
+        
         <div id="graphic-student">
           <!-- <div class="teste-grafico">
             <span style="color: red" class="bar_value rotate">PBE</span>
 
-            <progress class="progress_bar" max="100" value="90"></progress>
+            <progress class="progress-bar" max="100" value="90"></progress>
             <span style="color: red" class="bar_value rotate">1 </span>
           </div> -->
         </div>
-        <div class="span-bar">
-          <!-- <span style="color: red;" class="bar_value"> 2</span>
-                <span style="color: red;" class="bar_value">1 </span> -->
-        </div>
+      
       </div>
     </main>
 
