--- a/Front-End/home.html
+++ b/Front-End/home.html
@@ -56,14 +56,6 @@
     <img class="student-image" src="./img/studant.png" alt="Student" />
 
     <div id="buttons-options">
-      <!-- <button class="class">
-                <i class="fas fa-laptop-code"></i>
-                <h2 class="name-class">Ds</h2>
-            </button>
-            <button class="class">
-                <i class="fas fa-network-wired"></i>
-                <h2 class="name-class">Redes</h2>
-            </button> -->
     </div>
   </main>
   <footer>
@@ -92,22 +84,22 @@
 
     <ul class="social-container">
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="https://www.youtube.com/" target="_blank">
           <i class="fab fa-youtube"></i>
         </a>
       </li>
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="https://twitter.com/" target="_blank">
           <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/" target="_blank">
           <i class="fa-brands fa-instagram"></i>
         </a>
       </li>
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="https://pt-br.facebook.com/" target="_blank">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
