--- a/Front-End/class.html
+++ b/Front-End/class.html
@@ -49,8 +49,8 @@
       <div id="select">
         <select id="select-status" >
           <option value="status" >Status</option>
-          <option value="finalized">Finalizado</option>
-          <option value="studying">Cursando</option>
+          <option value="Finalizado">Finalizado</option>
+          <option value="Cursando">Cursando</option>
         </select>
 
         <select id="select-year">
