--- a/Front-End/home.html
+++ b/Front-End/home.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="out">
-      <a href="#">
+      <a href="javascript:history.back()">
         <i class="fas fa-sign-out-alt"></i>
         <span class="out__text">Sair</span>
       </a>
