--- a/Front-End/home.html
+++ b/Front-End/home.html
@@ -82,22 +82,22 @@
 
     <ul class="social-container">
       <li class="social">
-        <a href="https://www.youtube.com/" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to Youtube">
           <i class="fab fa-youtube"></i>
         </a>
       </li>
       <li class="social">
-        <a href="https://twitter.com/" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to Twitter">
           <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
       <li class="social">
-        <a href="https://www.instagram.com/" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to instagram">
           <i class="fa-brands fa-instagram"></i>
         </a>
       </li>
       <li class="social">
-        <a href="https://pt-br.facebook.com/" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
