--- a/Front-End/class.html
+++ b/Front-End/class.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="out">
+    <div class="back">
       <a href="./home.html">
         <i class="fas fa-sign-out-alt"></i>
         <span class="out__text">Voltar</span>
@@ -111,22 +111,22 @@
 
     <ul class="social-container">
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to Youtube">
           <i class="fab fa-youtube"></i>
         </a>
       </li>
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to Twitter">
           <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to instagram">
           <i class="fa-brands fa-instagram"></i>
         </a>
       </li>
       <li class="social">
-        <a href="#" target="_blank">
+        <a href="#" target="_blank" aria-label="From this link go to Facebook">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
