adicionando aria label para melhorar desempenho da página.

--- a/Front-End/class.html
+++ b/Front-End/class.html
@@ -38,7 +38,7 @@
 
     <div class="back">
       <a href="./home.html">
-        <i class="fas fa-sign-out-alt"></i>
+        <i class="fas fa-sign-out-alt" aria-label="Back to previous page"></i>
         <span class="out__text">Voltar</span>
       </a>
     </div>
