--- a/Front-End/home.html
+++ b/Front-End/home.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="out" id="out">
-        <i class="fas fa-sign-out-alt"></i>
+        <i class="fas fa-sign-out-alt" aria-label="Leave page"></i>
         <span class="out__text">Sair</span>
     </div>
   </header>
