--- a/Front-End/html/class.html
+++ b/Front-End/html/class.html
@@ -12,15 +12,15 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet" />
 
-  <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/style.css" />
-  <link rel="stylesheet" href="./css/colors.css" />
-  <link rel="stylesheet" href="./css/header.css" />
-  <link rel="stylesheet" href="./css/classMain.css" />
-  <link rel="stylesheet" href="./css/footer.css" />
-  <link rel="shortcut icon" type="imagem/x-icon" href="./img/logo-image.png" />
+  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/colors.css" />
+  <link rel="stylesheet" href="../css/header.css" />
+  <link rel="stylesheet" href="../css/classMain.css" />
+  <link rel="stylesheet" href="../css/footer.css" />
+  <link rel="shortcut icon" type="imagem/x-icon" href="../img/logo-image.png" />
 
-  <script src="./js/class.js" defer type="module"></script>
+  <script src="../js/class.js" defer type="module"></script>
   <script src="https://kit.fontawesome.com/56adc94ecd.js" crossorigin="anonymous"></script>
 
   <title>Lion School</title>
@@ -29,7 +29,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="./img/logo-image.png" alt="Logo Lion School" />
+      <img src="../img/logo-image.png" alt="Logo Lion School" />
       <div class="name-school">
         <span>Lion</span>
         <span>School</span>
@@ -37,7 +37,7 @@
     </div>
 
     <div class="back">
-      <a href="./home.html">
+      <a href="../index.html">
         <i class="fas fa-sign-out-alt" aria-label="Back to previous page"></i>
         <span class="out__text">Voltar</span>
       </a>
